
syntax = "proto3";

package protobuf;

option go_package="github.com/kubearmor-client/vm/protobuf";

message CliRequest {
    string KvmName = 1;
}

message ResponseStatus {
    string ScriptData = 1;
    string StatusMsg = 2;
    int32 Status = 3;
}

service HandleCli {
    rpc HandleCliRequest (CliRequest) returns (ResponseStatus);
}
